static/scss/_comment.scss
//
// Comments
// --------------------------------------------------

$commentLeftMargin: 35px;

@include media-breakpoint-down(md) {
    .comment {
        .post-files {
            img {
                height: 100px;
            }
        }
    }
}

.comment {
    .d-flex {
        position: relative !important;
        margin-top: 0;

        .nav-pills.preferences {
            display: none;
            right: 0;
        }

        &.comment-current {
            background: var(--hh-background-color-highlight);
            padding: 0 5px 5px 5px;
            margin: 0 -5px -5px -5px;
            border-radius: 3px;

            hr {
                position: relative;
                top: -6px;
            }

            &:first-of-type {
                padding-top: 5px;
                margin-top: -5px;

                > .nav.preferences {
                    margin-top: 10px;
                }
            }

            > .nav.preferences {
                margin-right: 10px;
            }

            .nested-comments-root {
                .comment-container {
                    margin-top: 5px;
                    padding-bottom: 10px;

                    .showMore {
                        margin-top: 0;
                        padding-top: 5px;
                    }
                }
            }
        }

        .comment-header-image {
            margin-right: 10px;
        }
    }

    .comment-blocked-user {
        img[data-contentcontainer-id] {
            filter: grayscale(100%);
        }
    }

    .jp-progress {
        background-color: #dbdcdd !important;
    }

    .jp-play-bar {
        background: #cacaca;
    }

    .post-file-list {
        background-color: darken($background-color-secondary, 2%);
    }
}

.comment.guest-mode {
    .d-flex:last-child {
        .wall-entry-controls {
            margin-bottom: 0;
            margin-left: $commentLeftMargin;
        }

        hr {
            display: none;
        }
    }
}

.comment-container {
    border-radius: 3px;

    .d-flex {
        overflow: visible;
    }

    hr {
        margin: 10px 0;
        border-top: 1px solid var(--hh-background-color-secondary);

        &.comment-separator:first-of-type {
            display: none;
        }
    }

    .content_edit {
        margin-left: $commentLeftMargin;
    }

    [data-ui-richtext] pre, [data-ui-richtext] pre code.hljs {
        background-color: darken($background-color-secondary, 5%);
    }
}

.comment-message {
    overflow: hidden;
    @include text-break();
}

.content-create-input-group {

    .mb-3 {
        margin-bottom: 0 !important;
    }

    &.scrollActive .upload-buttons {
        right: 22px;
    }
}

.comment h4.comment-heading {
    a {
        font-size: 13px;
        color: var(--hh-text-color-highlight);
        margin-bottom: 3px;
        font-weight: 500;
    }

    small {
        font-weight: 400;
        font-size: 11px;
    }
}

// Hide seperator of last comment. Seperator is included in optional comment form
div.comment {
    > div.d-flex:first-of-type .nav-pills.preferences {
        display: none;
        top: 0;
    }
}

div.nested-comments-root {
    margin-left: -0.5rem !important;

    .ProseMirror-menubar-wrapper {
        z-index: 210;
    }

    hr.comment-separator {
        display: inherit !important;
    }

    .showMore {
        margin-top: 10px;
    }

    div.comment {
        .d-flex {
            position: relative !important;
            margin-top: 0;

            .nav-pills.preferences {
                display: none;
                top: 8px;
                right: 0;
            }
        }
    }
}

